changed surefire config in pom.xml