@@ -105,14 +105,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M8</version>
-                <configuration>
-                    <argLine>
-                        --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                        --add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
-                        --add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
-                        --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <argLine>-->
+<!--                        &#45;&#45;add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED-->
+<!--                        &#45;&#45;add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED-->
+<!--                        &#45;&#45;add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED-->
+<!--                        &#45;&#45;add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED-->
+<!--                    </argLine>-->
+<!--                </configuration>-->
             </plugin>
         </plugins>
     </build>
